--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -15,4 +15,6 @@
     src: local("PressStart2P-Regular"),
       url("../fonts/PressStart2P-Regular.woff") format("woff2 supports variations"),
       url("../fonts/PressStart2P-Regular.woff") format("woff2-variations");
+      font-weight: 400 785;
+      font-stretch: 100%;
   }
