--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,8 +3,8 @@
   font-display: swap;
   font-family: "Inter";
   src: local("Inter-Variable"),
-    url("../fonts/Inter-Variable.woff2") format("woff2 supports variations"),
-    url("../fonts/Inter-Variable.woff2") format("woff2-variations");
+    url("Inter-Variable.woff2") format("woff2 supports variations"),
+    url("Inter-Variable.woff2") format("woff2-variations");
     font-weight: 400 785;
     font-stretch: 50% 200%;
 }
@@ -13,8 +13,8 @@
     font-display: swap;
     font-family: "Press Start 2P";
     src: local("PressStart2P-Regular"),
-      url("../fonts/PressStart2P-Regular.woff") format("woff2 supports variations"),
-      url("../fonts/PressStart2P-Regular.woff") format("woff2-variations");
+      url("PressStart2P-Regular.woff") format("woff2 supports variations"),
+      url("PressStart2P-Regular.woff") format("woff2-variations");
       font-weight: 400 785;
       font-stretch: 100%;
   }
