--- a/styles/style.css
+++ b/styles/style.css
@@ -15,8 +15,8 @@
   height: 100vh;
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: var(--text), helvetica;
-  font-variation-settings: "wght" 400;
+  font-family: var(--text), sans-serif;
+  font-variation-settings: var(--font-variation-settings);
   background-image: var(--page-background);
   background-size: cover;
   background-attachment: fixed;
@@ -31,12 +31,12 @@
   text-align: center;
   align-content: center;
   width: var(--header-width);
-  min-height: var(--header-height);
   border: 2px solid var(--black);
   background-color: var(--white);
+  padding: var(--padding);
 }
 .header__title {
-  font-family: var(--title), Pixelify Sans;
+  font-family: var(--title), fantasy;
   font-style: normal;
   font-weight: 400;
   font-size: var(--header-font-title);
@@ -45,15 +45,14 @@
   color: var(--black);
   padding-bottom: 20px;
 }
-.header__title-second {
-  font-family: var(--title), Pixelify Sans;
+.header__subtitle {
+  font-family: var(--title), fantasy;
   font-style: normal;
   font-weight: 400;
   font-size: var(--header-font-title-second);
   line-height: 23px;
   text-transform: uppercase;
   color: var(--black);
-  padding-right: 20px;
 }
 .main__block {
   display: grid;
@@ -65,7 +64,7 @@
   margin-bottom: 50px;
 }
 .main__title {
-  font-family: var(--text), helvetica;
+  font-family: var(--text), sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -74,16 +73,15 @@
   letter-spacing: 0.3px;
 }
 .main__paragraph {
-  font-family: var(--text), helvetica;
+  font-family: var(--text), sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   color: var(--black);
-  padding: 25px 25px;
+  padding: 30px 25px 0 25px;
 }
 .main__page {
-  max-block-size: 699px;
   border: none;
   border-bottom: 1px solid var(--black);
 }
@@ -93,6 +91,8 @@
   box-sizing: border-box;
   padding-right: 25px;
   padding-bottom: 25px;
+  padding-top: 25px;
+  gap: 5px;
 }
 .card__like-button {
   position: relative;
@@ -103,13 +103,13 @@
   width: 130px;
   color: var(--black);
   overflow: hidden;
-}
-.card__like-button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0 var(--black);
   transition: box-shadow 0.3s ease;
 }
-.card__like-button::before {
+.button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--black);
+}
+.button::before {
   content: "";
   position: absolute;
   top: 0;
@@ -121,7 +121,7 @@
   transition: transform 0.5s ease-in-out;
   z-index: 1;
 }
-.card__like-button:hover::before {
+.button:hover::before {
   transform: translateX(0);
 }
 .card__icon-button {
@@ -129,6 +129,13 @@
   transition: border-color 0.3s ease;
   cursor: pointer;
   height: 38px;
+  width: 40px;
+  background: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  box-sizing: border-box;
 }
 .card__icon-button:focus {
   outline: none;
@@ -144,13 +151,15 @@
 .image-container img {
   display: block;
   width: 100%;
+  object-fit: cover;
+  object-position: center;
   height: auto;
 }
 .image-label {
   position: absolute;
   top: 25px;
   right: 25px;
-  font-family: var(--title), Pixelify Sans;
+  font-family: var(--title), fantasy;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -186,26 +195,7 @@
   overflow: hidden;
   background-color: var(--white);
   border: 2px solid var(--black);
-}
-.save-section-button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0 var(--black);
   transition: box-shadow 0.3s ease;
-}
-.save-section-button::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--black);
-  transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out;
-  z-index: 1;
-}
-.save-section-button:hover::before {
-  transform: translateX(0);
 }
 .floppy-svg {
   position: relative;
@@ -215,9 +205,9 @@
 }
 .dialog {
   width: 353px;
-  height: 191px;
   border: 3px solid var(--black);
   translate: 100%;
+  padding: 30px 30px;
 }
 .dialog[open] {
   display: grid;
@@ -236,19 +226,20 @@ body:has(.dialog[open]) {
   grid-area: 2 / 1 / 3 / 3;
 }
 .dialog-paragraph {
-  font-family: var(--title), Pixelify Sans;
+  font-family: var(--title), fantasy;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
   text-transform: uppercase;
   color: var(--black);
+  padding-left: 15px;
 }
 .dialog-botton {
   position: relative;
   height: 38px;
   width: 293px;
-  font-family: var(--title), Pixelify Sans;
+  font-family: var(--title), fantasy;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -257,54 +248,38 @@ body:has(.dialog[open]) {
   color: var(--black);
   border: 2px solid var(--black);
   overflow: hidden;
-}
-.dialog-botton:focus {
-  outline: none;
-  box-shadow: 2px 2px 0 var(--black);
   transition: box-shadow 0.3s ease;
+  background: #ffffff;
+  margin-top: 30px;
 }
-.dialog-botton::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--black);
-  transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out;
-  z-index: 1;
-}
-.dialog-botton:hover::before {
-  transform: translateX(0);
-}
-.filter1 {
+.filter__brightness {
   filter: brightness(60%);
 }
-.filter2 {
+.filter__saturate {
   filter: saturate(250%);
 }
-.filter3 {
+.filter__blur {
   filter: blur(3px);
 }
-.filter4 {
+.filter__sepia {
   filter: sepia(0.3);
 }
-.filter5 {
+.filter__opacity {
   filter: opacity(80%);
 }
-.filter6 {
+.filter__grayscale {
   filter: grayscale(40%);
 }
-.filter7 {
+.filter__contrast {
   filter: contrast(250%);
 }
-.filter8 {
+.filter__combo {
   filter: brightness(60%) saturate(250%);
 }
 .like-icon {
+  background-color: transparent;
   height: 36px;
-  width: 39px;
+  width: 38px;
 }
 .sparks {
   opacity: 0;
@@ -371,7 +346,7 @@ body:has(.dialog[open]) {
   animation: move_sparks 0.3s ease-in;
 }
 .button__text {
-  font-family: var(--title), Pixelify Sans;
+  font-family: var(--title), fantasy;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -383,20 +358,24 @@ body:has(.dialog[open]) {
 }
 @media (width <= 375px) {
   .header-section {
-    min-height: clamp(327px, 100%, 500px);
+    padding: 112px 10px 114px 10px;
+  }
+  .header__title {
+    letter-spacing: -2px;
+    padding-bottom: 8px;
+  }
+  .header__subtitle {
+    letter-spacing: -1px;
   }
   .save-section-button {
     align-content: center;
     flex-wrap: wrap;
     width: 310px;
     height: 84px;
+    gap: 10px;
   }
   .floppy-svg {
     height: 28px;
     width: 28px;
-  }
-  .dialog {
-    width: 341px;
-    height: 191px;
   }
 }
