--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -13,8 +13,5 @@
     font-display: swap;
     font-family: "Press Start 2P";
     src: local("PressStart2P-Regular"),
-      url("PressStart2P-Regular.woff") format("woff2 supports variations"),
-      url("PressStart2P-Regular.woff") format("woff2-variations");
-      font-weight: 400 785;
-      font-stretch: 100%;
+      url("PressStart2P-Regular.woff") format("woff");
   }
