--- a/styles/style.css
+++ b/styles/style.css
@@ -16,14 +16,14 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--text), sans-serif;
-  font-variation-settings: 'wght' var(--font-variation-settings);
+  font-variation-settings: 'wght' var(--variation-settings-normal);
   background-image: var(--page-background);
   background-size: cover;
   background-attachment: fixed;
 }
 .header {
-  padding-top: 105px;
-  padding-bottom: 102px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .header-section {
   display: block;
@@ -58,7 +58,6 @@
   display: grid;
   justify-self: center;
   width: clamp(320px, 100%, 700px);
-  min-block-size: 700px;
   border: 2px solid var(--black);
   background-color: var(--white);
   margin-bottom: 50px;
@@ -66,11 +65,11 @@
 .main__title {
   font-family: var(--text), sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 18px;
   color: var(--black);
   padding: 3px 24px 3px 10px;
-  letter-spacing: 0.3px;
+  font-variation-settings: 'wght' var(--variation-settings-bold);
 }
 .main__paragraph {
   font-family: var(--text), sans-serif;
@@ -95,12 +94,14 @@
   gap: 5px;
 }
 .card__like-button {
+  height: 38px;
+  width: 130px;
+}
+.button {
   position: relative;
   box-sizing: border-box;
   background: var(--white);
   border: 2px solid var(--black);
-  height: 38px;
-  width: 130px;
   color: var(--black);
   overflow: hidden;
   transition: box-shadow 0.3s ease;
@@ -184,18 +185,8 @@
   padding-bottom: 105px;
 }
 .save-section-button {
-  position: relative;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
-  gap: 15px;
   height: 55px;
   width: 340px;
-  overflow: hidden;
-  background-color: var(--white);
-  border: 2px solid var(--black);
-  transition: box-shadow 0.3s ease;
 }
 .floppy-svg {
   position: relative;
@@ -236,21 +227,10 @@ body:has(.dialog[open]) {
   padding-left: 15px;
 }
 .dialog-botton {
-  position: relative;
   height: 38px;
   width: 293px;
-  font-family: var(--title), fantasy;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 90%;
-  text-transform: uppercase;
-  color: var(--black);
-  border: 2px solid var(--black);
-  overflow: hidden;
-  transition: box-shadow 0.3s ease;
-  background: #ffffff;
   margin-top: 30px;
+  text-transform: uppercase;
 }
 .filter__brightness {
   filter: brightness(60%);
@@ -368,6 +348,8 @@ body:has(.dialog[open]) {
     letter-spacing: -1px;
   }
   .save-section-button {
+    display: flex;  
+    justify-content: center;
     align-content: center;
     flex-wrap: wrap;
     width: 310px;
