--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--text), sans-serif;
-  font-variation-settings: 'wght' var(--variation-settings-normal);
+  font-variation-settings: "wght" var(--variation-settings-normal);
   background-image: var(--page-background);
   background-size: cover;
   background-attachment: fixed;
@@ -69,7 +69,7 @@
   font-size: 18px;
   color: var(--black);
   padding: 3px 24px 3px 10px;
-  font-variation-settings: 'wght' var(--variation-settings-bold);
+  font-variation-settings: "wght" var(--variation-settings-bold);
 }
 .main__paragraph {
   font-family: var(--text), sans-serif;
@@ -348,7 +348,7 @@ body:has(.dialog[open]) {
     letter-spacing: -1px;
   }
   .save-section-button {
-    display: flex;  
+    display: flex;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
